--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -60,20 +60,27 @@
                         <a href="./index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./historia.html" id="destinosDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="" id="destinosDropdown" role="button"
                             data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             Club
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="">Historia</a></li>
+                            <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                             <li><a class="dropdown-item" href="https://swimburger-cas-app-demo.web.app/forms/licencia">Licencias</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a href="./calendario.html" class="nav-link">Calendario</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="./estadisticas_club.html" class="nav-link ">Estadísticas</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" id="destinosDropdown" role="button"
+                            data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            Estadísticas                            
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="./records_club.html">Récords del Club</a></li>
+                            <li><a class="dropdown-item" href="./estadisticas_atleta.html">Estadísticas Atletas</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a href="./patrocinadores.html" class="nav-link ">Patrocinadores</a>
@@ -131,7 +138,6 @@
 
 
 
-    <!-- Footer-->
     <footer class="bg-light py-5 mt-5">
 
         <div class="container">
@@ -142,7 +148,7 @@
                         <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-muted">Inicio</a></li>
                         <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
                         <li class="nav-item mb-2"><a href="./calendario.html" class="nav-link p-0 text-muted">Calendario</a></li>
-                        <li class="nav-item mb-2"><a href="./estadisticas_club.html" class="nav-link p-0 text-muted">Estadisticas</a></li>
+                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Estadisticas</a></li>
                         <li class="nav-item mb-2"><a href="./patrocinadores.html" class="nav-link p-0 text-muted">Patrocinadores</a></li>
                         <li class="nav-item mb-2"><a href="./contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
 
@@ -154,6 +160,14 @@
                         <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a></li>
 
                         <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia" class="nav-link p-0 text-muted">Inscripciones</a></li>
+
+                    </ul>
+                    <br>
+                    <h5>Estadísticas</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="./records_club.html" class="nav-link p-0 text-muted">Récords del Club</a></li>
+
+                        <li class="nav-item mb-2"><a href="./estadisticas_atleta.html" class="nav-link p-0 text-muted">Estadisticas Atletas</a></li>
 
                     </ul>
                 </div>
@@ -187,9 +201,8 @@
                         href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
                         target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
                 <ul class="list-unstyled d-flex">
-                    <li class="ms-4"><a class="bi bi-twitter link-dark" href="#"></a></li>
-                    <li class="ms-4"><a class="bi bi-instagram link-dark" href="#"></a></li>
-                    <li class="ms-4"><a class="bi bi-facebook link-dark" href="#"></svg></a></li>
+                    <li class="ms-4"><a class="bi bi-instagram link-dark" href="https://www.instagram.com/atletismosantiago/?hl=es"></a></li>
+                    <li class="ms-4"><a class="bi bi-facebook link-dark" href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES"></svg></a></li>
                 </ul>
             </div>
 
