arreglados unos pequenhos fallos

--- a/calendario.html
+++ b/calendario.html
@@ -97,7 +97,7 @@
 
     </nav>
     <style>
-        button {
+        #calendar button {
             background-color: var(--brand) !important;
             border-color: #000000!important;
         }
