--- a/records_club.html
+++ b/records_club.html
@@ -110,6 +110,7 @@
             .table-wrapper {
                 width: 100%;
                 overflow: auto;
+                margin: 0 auto;
             }
 
             .table-wrapper table {
@@ -125,10 +126,10 @@
             }
         </style>
 
-        <div class="row justify-content-center text-center d-flex align-items-center mt-0  table-wrapper">
+        <div class="row d-flex justify-content-center text-center align-items-center mt-0  table-wrapper">
 
 
-            <table id="tabla-marcas">
+            <table id="tabla-marcas" >
                 <thead>
                     <tr>
                         <th>Tipo de Prueba</th>
