cambio estadistica atleta prueba

--- a/estadisticas_atleta.html
+++ b/estadisticas_atleta.html
@@ -133,7 +133,7 @@
                             </select>
                         </div>
                         <div class="col-md-3">
-                            <label for="tipoPrueba">Tipo de Prueba:</label>
+                            <label for="tipoPrueba">Prueba:</label>
                             <select id="tipoPrueba" class="form-control" required>
                                 <!-- Opciones de tipos de prueba -->
                             </select>
