Calendario empieza semana lunes

--- a/calendario.html
+++ b/calendario.html
@@ -225,6 +225,7 @@
                             height: 'auto',
                             defaultView: 'dayGridMonth',
                             locale: 'es',
+                            firstDay: 1,
                             eventLimit: true,
                             dayMaxEvents: 3,
                             views: {
