bajar resolucion imagenes

--- a/historia.html
+++ b/historia.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
             <a class="navbar-brand" href="./index.html" style="max-width: 40%">
-                <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
+                <img src="./img/logo.webp" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -117,7 +117,7 @@
             </div>
 
             <div class="col-lg-5 flex align-items-center justify-content-center text-center">
-                <img src="img/reloj-de-arena.png" style="width: 60%;" class="img-fluid" alt="">
+                <img src="img/reloj-de-arena.webp" style="width: 60%;" class="img-fluid" alt="">
             </div>
         </div>
     </div>
