--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
             <a class="navbar-brand" href="./index.html" style="max-width: 40%">
-                <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
+                <img src="./img/logo.webp" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -108,7 +108,7 @@
             <!-- Sección de Patrocinadores Actuales -->
             <div class="row">
                 <div class="col-12 mb-4" style="margin-top: -3%;">
-                    <img src="./img/patrocinadores.png" alt="Patrocinadores" style="width: 100%;">
+                    <img src="./img/patrocinadores.webp" alt="Patrocinadores" style="width: 100%;">
                 </div>
             </div>
 
