--- a/records_club.html
+++ b/records_club.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
             <a class="navbar-brand" href="./index.html" style="max-width: 40%">
-                <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
+                <img src="./img/logo.webp" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
